[package]
name = "xgb"
version = "3.1.3"
authors = ["Dave Challis <dave@suicas.net>", "Marco Mengelkoch"]
license = "MIT"
repository = "https://github.com/marcomq/rust-xgboost"
homepage = "https://github.com/marcomq/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost_lib"
readme = "README.md"
edition = "2024"

[dependencies]
xgboost-sys = { package = "xgboost_lib-sys", path = "xgboost-sys", version = "3.1.3" }
libc = "0.2.180"
derive_builder = "0.20.2"
log = "0.4.29"
tempfile = "3.24.0"
indexmap = "2.13.0"

[features]
use_prebuilt_xgb = ["xgboost-sys/use_prebuilt_xgb"]
local_build = ["xgboost-sys/local_build"]
cuda = ["xgboost-sys/cuda"]
default  = ["use_prebuilt_xgb"]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "dmatrix_benchmark"
harness = false

[[example]]
name = "bench_table"
