[package]
name = "xgboost_lib-sys"
version = "3.1.3"
authors = ["Dave Challis <dave@suicas.net>", "Marco Mengelkoch"]
links = "xgboost"
build = "build.rs"
license = "MIT"
repository = "https://github.com/marcomq/rust-xgboost"
description = "Native bindings to the xgboost library"
readme = "README.md"
edition = "2021"
exclude = [
    "lib/*",
]


[build-dependencies]
bindgen = { version = "0.72.1" }
dunce =  { version = "1.0.5" }
reqwest = { version = "0.13.1", features = ["blocking"], optional = true }
cmake = { version = "0.1.57", optional = true }

[features]
default = ["use_prebuilt_xgb"]
use_prebuilt_xgb = ["reqwest"]
local_build = ["cmake"]
cuda = []
